# glad

./: CMakeLists.txt
.github/: pull.yml
include/glad/: glad.h
src/: glad.c
